fix nav for media query, add stretch challenge - a vacation form

--- a/css/index.css
+++ b/css/index.css
@@ -242,10 +242,12 @@ header {
     height: 70vh;
   }
 }
+header .top-content {
+  border-bottom: 2px dashed #C0C0C0;
+  border-top: 2px dashed #C0C0C0;
+}
 header .fun-bus {
   width: 100%;
-  border-top: 2px dashed #C0C0C0;
-  border-bottom: 2px dashed #C0C0C0;
   padding: 2%;
   /*closes h2*/
 }
@@ -259,6 +261,9 @@ header .fun-bus h2 {
   }
 }
 /*closes header*/
+.home {
+  /*closes package */
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
@@ -361,4 +366,48 @@ header .fun-bus h2 {
   .home .content-pick .destination .btn .sign-up {
     width: 100%;
   }
+}
+.home .package {
+  width: 40%;
+  background: white;
+  margin-bottom: 7%;
+  align-items: center;
+  margin-left: 30%;
+  /*closes label */
+  /*closes submit-button*/
+  /*closes input form*/
+}
+.home .package label {
+  font-size: 1.5rem;
+}
+.home .package .submit-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /*closes submit*/
+}
+.home .package .submit-button .submit {
+  cursor: pointer;
+  width: 80%;
+  color: #FFFFFF;
+  background: #17A2B8;
+  height: 40px;
+  font-size: 1.7rem;
+  border-radius: 10px;
+}
+.home .package .submit-button .submit:hover {
+  background: #FFEBCD;
+  color: #212529;
+}
+.home .package input {
+  background: white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1%;
+  border: 1px solid black;
+  margin: 1%;
 }
